# neuros

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  hermes-migration.md  pyproject.toml
.pi/: taskplane.json
docs/: native-macos-app-plan.md
macos/NeurOS/: Package.swift
macos/NeurOS/Sources/: AppDelegate.swift  CommandPanelController.swift  CommandPanelView.swift  HotKeyController.swift  StatusItemController.swift
neuros/: __init__.py  config.py  graph.py  main.py  models.py  telemetry.py
neuros/llm/: __init__.py  client.py  embedder.py  registry.py  selector.py
neuros/memory/: __init__.py  graphiti_store.py  manager.py  postgres.py  qdrant.py  redis.py
neuros/security/: injection.py
neuros/skills/: __init__.py  base.py  registry.py
neuros/skills/code/: __init__.py  _safety.py  applier.py  escalate.py  git_ops.py  improver.py  reader.py  tester.py
neuros/skills/infra/: __init__.py  gpu_server.py  nas.py  ssh.py
neuros/skills/knowledge/: __init__.py  capture.py  ingest.py  recall.py  remember.py  summarize.py
neuros/skills/macos/: __init__.py  calendar.py  reminders.py  system.py
neuros/skills/search/: __init__.py  searxng.py
overlay/: README.md  init.lua
scripts/: setup_db.py  setup_dogfood.py  test_embed.py  test_graphiti.py  test_inference.py  test_memory.py
scripts/launchd/: com.neuros.agent.plist
tests/: __init__.py  test_dogfood.py  test_graph.py  test_graphiti.py  test_integration.py  test_memory.py  test_models.py  test_skills_infra.py  test_skills_macos.py  test_skills_search.py
